--- a/web-developer.html
+++ b/web-developer.html
@@ -46,7 +46,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.boxedred.com/blog/careers/web-developer/'>Web Developer - Boxed Red Marketing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.boxedred.com/blog/careers/web-developer/'>Web Developer - Boxed Red Marketing</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -70,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://applift.recruitee.com/l/de/o/php-web-developer-fmd-for-rechhero'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://applift.recruitee.com/l/de/o/php-web-developer-fmd-for-rechhero'>
       PHP Web Developer (w/m/d), f?r Rechhero - Applift
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325921002'>Job Application for Web Developer/Designer at Unite Us</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325921002'>Job Application for Web Developer/Designer at Unite Us</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -128,11 +128,11 @@
 <p><span class="badge badge-light">Washington, DC  Boston, Massachusetts  New York, New York  Reston, Virginia  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloagain-jobs.join.com/jobs/468490-web-developer'>Job @ helloain (Pasching): WEB DEVELOPER | JOIN</a></h5> 
+<h5><a href='https://helloagain-jobs.join.com/jobs/468490-web-developer'>Job @ helloain (Pasching): WEB DEVELOPER | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579843-front-end-web-developer-intern'>Broadsign Front End Web Developer Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579843-front-end-web-developer-intern'>Broadsign Front End Web Developer Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -164,7 +164,7 @@
 <p><span class="badge badge-light">Canada Canada  Canada  Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://onedot.join.com/jobs/462868-web-developer-intern'>Job @ Onedot (Schlieren): Web Developer Intern | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://onedot.join.com/jobs/462868-web-developer-intern'>Job @ Onedot (Schlieren): Web Developer Intern | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -200,7 +200,7 @@
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698470033-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698470033-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -220,11 +220,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oWVTafwE&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=n1LfoMwG'>ServiceNow Careers - Senior Marketing Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oWVTafwE&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=n1LfoMwG'>ServiceNow Careers - Senior Marketing Web Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/automationanywhere/job/okFmbfwg'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/automationanywhere/job/okFmbfwg'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -299,7 +299,7 @@
 <p><span class="badge badge-light">United States United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=obw1afwC&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nWrunMwv'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=obw1afwC&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nWrunMwv'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -343,7 +343,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=o6w1afwx&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nzCTmMwH'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=o6w1afwx&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nzCTmMwH'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
